feat: sensor BME688 integrado

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = pico
 framework = arduino
 board_build.core = earlephilhower
-lib_deps = adafruit/Adafruit BNO08x@^1.2.5
-
+lib_deps = 
+	adafruit/Adafruit BNO08x@^1.2.5
+	adafruit/Adafruit BME680 Library@^2.0.4
 monitor_speed = 9600
